[gd_scene load_steps=2 format=2]

[ext_resource path="res://ApiConnection.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 261.0
margin_bottom = 20.0
text = "Get Data From API"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TestData" type="RichTextLabel" parent="."]
margin_left = 294.0
margin_top = 9.0
margin_right = 1011.0
margin_bottom = 488.0
text = "Test Data"

[connection signal="button_up" from="Button" to="." method="_Get_Api_Data"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
